# 3-python-package-package-bear

./: .gitignore  Data.txt  README.md  buildabear.py  example.md  pyproject.toml
.github/workflows/: build.yaml
src/buildabearpackage/: __init__.py  __main__.py  buildabear.py
tests/: Data.txt  test_buildabear.py
