[project]
name = "buildabear_jasmine7310_s-m-wang_TadelinD_alw9411"
version = "0.0.1"
authors = [
  { name="Jasmine Fan", email="jf4654@nyu.edu" },
  { name="Sophia Wang", email="smw9999@nyu.edu" },
  { name="Tadelin De Leon", email="td2349@nyu.edu" },
  { name="Alex Wang", email="alw9411@nyu.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"