[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buildabear_jasmine7310_s-m-wang_TadelinD_alw9411"
description = "A command line pet that you can feed, clean, and play with!"
version = "0.1.5"
authors = [
  { name="Jasmine Fan", email="jf4654@nyu.edu" },
  { name="Sophia Wang", email="smw9999@nyu.edu" },
  { name="Tadelin De Leon", email="td2349@nyu.edu" },
  { name="Alex Wang", email="alw9411@nyu.edu" },
]
readme = "README.md"
keywords = ["package", "bear"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = ["pytest"]

[tool.flit.sdist]
include = ["Data.txt"]

[project.urls]
Homepage = "https://github.com/software-students-spring2025/3-python-package-package-bear"
Repository = "https://github.com/software-students-spring2025/3-python-package-package-bear"
Issues = "https://github.com/software-students-spring2025/3-python-package-package-bear/issues"

[project.scripts]
buildabearpackage = "buildabearpackage.__main__:main"